# cp2kdata

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/: release.yml
_api/: cp2kdata.block_parser.atomic_kind.html  cp2kdata.block_parser.cells.html  cp2kdata.block_parser.converge.html  cp2kdata.block_parser.coordinates.html  cp2kdata.block_parser.dft_plus_u.html  cp2kdata.block_parser.dipole.html  cp2kdata.block_parser.energies.html  cp2kdata.block_parser.errors_handle.html  cp2kdata.block_parser.fep.html  cp2kdata.block_parser.forces.html  cp2kdata.block_parser.geo_opt.html  cp2kdata.block_parser.header_info.html  cp2kdata.block_parser.hirshfeld.html  cp2kdata.block_parser.html  cp2kdata.block_parser.md_xyz.html  cp2kdata.block_parser.mulliken.html  cp2kdata.block_parser.stress.html  cp2kdata.block_parser.vibration.html  cp2kdata.cell.html  cp2kdata.cli.cmd.html  cp2kdata.cli.funcs.html  cp2kdata.cli.html  cp2kdata.cube.cube.html  cp2kdata.cube.html  cp2kdata.dpdata_plugin.html  cp2kdata.html  cp2kdata.log.html  cp2kdata.matplotlibstyle.html  cp2kdata.output.html  cp2kdata.paser_func.html  cp2kdata.pdos.html  cp2kdata.pdos.pdos.html  cp2kdata.plots.colormaps.html  cp2kdata.plots.fep_plot.html  cp2kdata.plots.geo_opt_plot.html  cp2kdata.plots.html  cp2kdata.plots.test_plot.html  cp2kdata.test_input.html  cp2kdata.units.html  cp2kdata.utils.html  (+1 more)
_modules/: index.html
_sources/: intro.md
cp2kdata/: __init__.py  cell.py  (+11 more)
(+340 files in other folders)
