[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Cp2kData"
version = "0.6.5"
description = "A Small Package to Postprocess Cp2k Output"
authors = [
    {name = "Yongbin Zhuang", email = "robinzhuang@outlook.com"}
    ]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)"
]
dependencies = [
    "numpy>=1.24.3",
    "scipy>=1.5.4",
    "matplotlib>=3.3.2",
    "ase>=3.20.1",
    "cp2k-input-tools",
    "dpdata",
    "click",
    "regex",
    "monty",
    "pyyaml",
    "asciichartpy"
]
requires-python = ">=3.8"
keywords = ["cp2k", "cp2kdata"]

[project.urls]
homepage = "https://github.com/robinzyb/cp2kdata"
repository = "https://github.com/robinzyb/cp2kdata"

[project.entry-points.console_scripts]
cp2kdata = "cp2kdata.cli.cmd:cli"

[project.entry-points.'dpdata.plugins']
'cp2kdata/e_f' = "cp2kdata.dpdata_plugin:CP2KEnergyForceFormat"
'cp2kdata/md' = "cp2kdata.dpdata_plugin:CP2KMDFormat"



[tool.setuptools.packages.find]
include = ["cp2kdata*"]

[tool.setuptools.package-data]
cp2kdata = ["matplotlibstyle/*.mplstyle"]



